--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                             <a href="https://apps.apple.com/us/app/itunes-u/id1200289673" target="_blank" class="app-link ios">
                                                 <i class="fab fa-apple"></i> App Store
                                             </a>
-                                            <a href="https://play.google.com/store/apps/details" target="_blank" class="app-link android">
+                                            <a href="https://play.google.com/store/apps/details?id=com.spacer&hl=ja&pli=1" target="_blank" class="app-link android">
                                                 <i class="fab fa-google-play"></i> Google Play
                                             </a>
                                         </div>
@@ -400,9 +400,9 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="transit-segment sakaisuji-line-color">
+                                    <div class="transit-segment chuo-line-color">
                                         <div class="segment-line"></div>
-                                        <div class="segment-label">堺筋線</div>
+                                        <div class="segment-label">中央線</div>
                                     </div>
                                     
                                     <div class="station-stop transfer">
