--- a/index.html
+++ b/index.html
@@ -299,6 +299,13 @@
                                         <a href="https://cloak.ecbo.io/ja/jpn/city/osaka/1018" target="_blank" class="booking-btn">
                                             <i class="fas fa-external-link-alt"></i> 予約サイト
                                         </a>
+                                        <a href="https://discordapp.com/channels/987171689165127700/1406470927788671036" target="_blank" class="discord-link">
+                                            <i class="fab fa-discord"></i> 
+                                            <div class="discord-link-info">
+                                                <span>預かり所の使用方法</span>
+                                                <small>予約サイトの使い方・注意点</small>
+                                            </div>
+                                        </a>
                                     </div>
 
                                     <div class="simple-pricing">
