--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>1Fのセカイ旅行計画 - 2025年8月29日-31日</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link rel="icon" href="./faviconsekai2025.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
